@@ -3,7 +3,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL
 # =============================================================================
 # 
-# @(#) $RCSfile: configure.ac,v $ $Name:  $($Revision: 0.9.2.18 $) $Date: 2008-05-03 21:22:31 $
+# @(#) $RCSfile: configure.ac,v $ $Name:  $($Revision: 0.9.2.19 $) $Date: 2008-07-01 12:48:53 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -48,7 +48,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2008-05-03 21:22:31 $ by $Author: brian $
+# Last Modified $Date: 2008-07-01 12:48:53 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -57,7 +57,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl
 AC_PREREQ([2.61])
 AC_INIT([striso],[0.9.2],[bugs@openss7.org])
-AC_REVISION([$Name:  $($Revision: 0.9.2.18 $) $Date: 2008-05-03 21:22:31 $])
+AC_REVISION([$Name:  $($Revision: 0.9.2.19 $) $Date: 2008-07-01 12:48:53 $])
 
 _OPENSS7_DIRCHANGE
 
@@ -102,7 +102,8 @@ AC_PROG_YACC
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
-dnl AM_GNU_GETTEXT_VERSION([0.16.1])
+AM_GNU_GETTEXT_VERSION([0.16.1])
+AM_GNU_GETTEXT
 
 dnl
 dnl Checks for libraries.
@@ -151,7 +152,6 @@ AC_CHECK_TYPES([ptrdiff_t])
 dnl
 dnl Checks for library functions.
 dnl
-dnl AM_GNU_GETTEXT
 AC_FUNC_ERROR_AT_LINE
 if test :${cross_compiling:-no} != :yes ; then :; AC_FUNC_FORK fi
 AC_PROG_GCC_TRADITIONAL
@@ -175,6 +175,8 @@ AC_ISO
 
 AC_CONFIG_FILES([Makefile
 		 scripts/texi/args.texi
+		 intl/Makefile
+		 po/Makefile.in
 		 src/include/Makefile
 		 src/Makefile
 		 lib32/Makefile
@@ -190,6 +192,9 @@ AC_OUTPUT
 # =============================================================================
 #
 # $Log: configure.ac,v $
+# Revision 0.9.2.19  2008-07-01 12:48:53  brian
+# - updated drafts and docs
+#
 # Revision 0.9.2.18  2008-05-03 21:22:31  brian
 # - updates for release
 #
